src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	html {
		font-family: 'Nunito Variable', sans-serif;
	}
}

@layer utilities {
	.text-wrap-balance {
		text-wrap: balance;
	}
	/* For Webkit-based browsers (Chrome, Safari and Opera) */
	.scrollbar-hide::-webkit-scrollbar {
		display: none;
	}
	/* For IE, Edge and Firefox */
	.scrollbar-hide {
		-ms-overflow-style: none; /* IE and Edge */
		scrollbar-width: none; /* Firefox */
	}
}

